Make it compile with the 3rd paper

--- a/FrontBackmatter/Declaration.tex
+++ b/FrontBackmatter/Declaration.tex
@@ -12,7 +12,7 @@ Put your declaration here.
 \smallskip
 
 \begin{flushright}
-    \begin{tabular}{m{5cm}}
+    \begin{tabular}{p{5cm}}
         \\ \hline
         \centering\myName \\
     \end{tabular}
